--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -211,7 +211,7 @@ video {
   height: 150px;
 }
 
-#auth-btn {
+#stop-n-go-btn {
   height: 50%;
   width: 100%;
   border: 3px solid $dark-color;
@@ -221,7 +221,7 @@ video {
   background-color: white;
 }
 
-#auth-btn button {
+#stop-n-go-btn button {
   height: 100%;
   width: 100%;
   cursor: pointer;
@@ -235,77 +235,7 @@ video {
   }
 }
 
-#chat-btns .btn {
-  background-color: white;
-  text-align: center;
-  display: inline-block;
-  width: 50%;
-  height: 100%;
-  border: none;
-  padding: 0;
-  position: relative;
-  button {
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-    border: none;
-    font-family: "europa";
-    font-size: 17px;
-    color: $dark-color;
-    position: relative;
-    z-index: 2;
-    &:disabled {
-      color: #aaa;
-      cursor: default;
-    }
-    &.pulse {
-      color: white;
-    }
-    &.pulse-add {
-      transition: 1.5s all ease;
-      transition-delay: .5s;
-    }
-  }
-}
-
-#chat-btns .btn .gradient {
-  background: rgb(232,145,102); /* Old browsers */
-  background: -moz-linear-gradient(left,  rgba(232,145,102,1) 0%, rgba(246,207,192,1) 14%, rgba(246,215,210,1) 23%, rgba(215,183,221,1) 41%, rgba(166,151,211,1) 51%, rgba(135,132,194,1) 63%, rgba(84,92,162,1) 73%, rgba(47,61,117,1) 83%, rgba(41,49,99,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(232,145,102,1)), color-stop(14%,rgba(246,207,192,1)), color-stop(23%,rgba(246,215,210,1)), color-stop(41%,rgba(215,183,221,1)), color-stop(51%,rgba(166,151,211,1)), color-stop(63%,rgba(135,132,194,1)), color-stop(73%,rgba(84,92,162,1)), color-stop(83%,rgba(47,61,117,1)), color-stop(100%,rgba(41,49,99,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(left,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(left,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(left,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* IE10+ */
-  background: linear-gradient(to right,  rgba(232,145,102,1) 0%,rgba(246,207,192,1) 14%,rgba(246,215,210,1) 23%,rgba(215,183,221,1) 41%,rgba(166,151,211,1) 51%,rgba(135,132,194,1) 63%,rgba(84,92,162,1) 73%,rgba(47,61,117,1) 83%,rgba(41,49,99,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e89166', endColorstr='#293163',GradientType=1 ); /* IE6-9 */
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  &.pulse {
-    opacity: 1;
-  }
-  &.pulse-add {
-    transition: 1.5s opacity ease;
-    transition-delay: .5s;
-  }
-  &.pulse-remove {
-    transition: 0.5s linear;
-  }
-}
-
-#chat-btns .btn.half {
-  position: relative;
-  width: 25%;
-}
-
-#chat-btns .btn + .btn {
-  border-left: 3px solid $dark-color;
-  margin-left: -4px;
-}
-
-#chat-btns-wrapper {
+#next-btn {
   height: 50%;
   width: 100%;
   border: 3px solid $dark-color;
@@ -313,27 +243,18 @@ video {
   overflow: hidden;
 }
 
-#chat-btns {
-  width: 200%;
+#next-btn button {
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  font-family: "europa";
+  font-size: 17px;
   height: 100%;
-}
-
-#chat-btns #first-chat-btn.half-add {
-  transition: 1.2s;
-  width: 50%;
-}
-
-#chat-btns #first-chat-btn.half-add-active {
-  width: 25%;
-}
-
-#chat-btns #first-chat-btn.half-remove {
-  transition: .8s;
-  width: 25%;
-}
-
-#chat-btns #first-chat-btn.half-remove-active {
-  width: 50%;
+  width: 100%;
+  &:disabled {
+    color: #aaa;
+    cursor: default;
+  }
 }
 
 .local-stream {
