--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -417,7 +417,7 @@ video {
   background-color: white;
 }
 
-#send-msg-form.ng-hide-add, #send-msg-form.ng-hide-remove {
+#send-msg-form.ng-hide-remove {
   transition: 0.8s ease;
 
   display: block !important;
