--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -39,6 +39,7 @@ html.no-js
     script(src="bower_components/jquery/jquery.js")
     script(src="bower_components/angular/angular.js")
     script(src="bower_components/angular-animate/angular-animate.min.js")
+    script(src="bower_components/angular-sanitize/angular-sanitize.min.js")
 
     // build:js(app) scripts/scripts.js
     script(src="scripts/app.js")
@@ -55,6 +56,21 @@ html.no-js
     script(src="scripts/directives/front_door.js")
     script(src="scripts/controllers/chat.js")
     // endbuild
+
+    script.
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=362760827200419&version=v2.0";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+
+    script.
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
+      if(!d.getElementById(id)){js=d.createElement(s); js.id=id;
+      js.src="https://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js,fjs);
+      }}(document,"script","twitter-wjs");
 
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
