--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -36,12 +36,13 @@ html.no-js
 
     include chat
 
-    footer
-      #footer-rules Be cool, don't hurt anyone, and laugh as much as you can.
-      #footer-links
-        a(href="https://facebook.com/6amchat", target="_blank") Facebook
-        a(href="https://twitter.com/6amchat", target="_blank") Twitter
-        a(href="mailto:matt@6amchat.com", target="_blank") Email
+    footer Be cool, don't hurt anyone, and make them laugh as much as you can. Links:&nbsp;
+      a(href="https://facebook.com/6amchat", target="_blank") Facebook
+      | ,&nbsp;
+      a(href="https://twitter.com/6amchat", target="_blank") Twitter
+      | ,&nbsp;and&nbsp;
+      a(href="mailto:matt@6amchat.com", target="_blank") Email
+      | .
 
     script(src="bower_components/jquery/jquery.js")
     script(src="bower_components/angular/angular.js")
