Rename bonfireApp to just app

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -25,7 +25,7 @@ html.no-js
       mixpanel.init("fdd9678e32a0df3a9dee8f5c67e45091");
       mixpanel.track('Loaded Page');
     //- build:head
-  body(ng-app="bonfireApp")
+  body(ng-app="app")
     //[if lt IE 7]>
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
       <![endif]
