--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -67,3 +67,41 @@ main {
   letter-spacing: 3px;
   text-align: center;
 }
+
+form {
+  margin-bottom: 16px;
+  margin-top: 28px;
+}
+
+input {
+  border-radius: 0px;
+  border: 4px solid $dark-color;
+  border-bottom: 0;
+  margin: 0;
+  padding: 0 10px;
+  height: 100%;
+  font-size: 14px;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  &:focus {
+    outline: none;
+  }
+}
+
+button {
+  background-color: #222;
+  border: none;
+  color: white;
+  padding: 0 18px;
+  font-size: 14px;
+  height: 100%;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+  vertical-align: top;
+  height: 40px;
+  width: 100%;
+  &:focus {
+    outline: none;
+  }
+}
