Minor iterations to mobile.html

--- a/app/jade/mobile.jade
+++ b/app/jade/mobile.jade
@@ -39,8 +39,8 @@ html.no-js
         p is a way to meet and have conversations with people from all around the world on your laptop or desktop computer.
         a.go-to-slide-2(href="#") Tell Me More
       .slide#slide-2.js-hide
-        p If you were on a laptop or desktop computer and you turned on your webcam and mic, you'd be connected with someone. And whenever you wanted to meet someone new you could click "Next".
-        a.go-to-slide-3(href="#") Sounds Interesting!
+        p When you've turned on your webcam and mic, someone from somewhere in the world will show up on your screen. Then you could have a deep, meaningful conversation with them late into the night, or you could be ruthless and by clicking Next meet someone new.
+        a.go-to-slide-3(href="#") Sounds Scary!
         br
         br
         a.go-to-slide-1(href="#") Go Back
