Add fourth slide to mobile.html

--- a/app/jade/mobile.jade
+++ b/app/jade/mobile.jade
@@ -37,19 +37,25 @@ html.no-js
       .slide#slide-1
         #slide-1-logo 6AM CHAT
         p is a way to meet and have conversations with people from all around the world on your laptop or desktop computer.
-        a.go-to-slide-2(href="#") Tell Me More
+        a.go-to-slide-2(href="#") Tell me more
       .slide#slide-2.js-hide
-        p When you've turned on your webcam and mic, someone from somewhere in the world will show up on your screen. Then you could have a deep, meaningful conversation with them late into the night, or you could be ruthless and by clicking Next meet someone new.
-        a.go-to-slide-3(href="#") Sounds Scary!
+        p If you were on one and you turned on your webcam and mic, someone from somewhere in the world would show up on your screen.
+        a.go-to-slide-3(href="#") Then what?
         br
         br
-        a.go-to-slide-1(href="#") Go Back
+        a.go-to-slide-1(href="#") Go back
       .slide#slide-3.js-hide
+        p Then you could have a deep, meaningful conversation with them late into the night, or you could be ruthless and by clicking Next meet someone new.
+        a.go-to-slide-4(href="#") Sounds scary!
+        br
+        br
+        a.go-to-slide-2(href="#") Go back
+      .slide#slide-4.js-hide
         p We can email you a reminder to check this website out on your laptop or desktop computer if you want! Don't worry, we don't save your email address, all we do is just send one email.
         form(method="post", action="emails/reminder")
           input(type="email", name="email", placeholder="Email Address")
           button(type="submit") Send Reminder
-        a.go-to-slide-2(href="#") Go Back
+        a.go-to-slide-3(href="#") Go back
 
     script(src="bower_components/jquery/jquery.js")
 
