[bug] Make names of compiled mobile asset files unique

--- a/app/jade/mobile.jade
+++ b/app/jade/mobile.jade
@@ -11,7 +11,7 @@ html.no-js
     title 6AM Chat
     meta(name="description", content="Meet random people from around the world and have late-night conversations using your webcam and mic.")
     meta(name="viewport", content="width=device-width")
-    // build:css(.tmp) styles/main.css
+    // build:css(.tmp) styles/mobile.css
     link(rel="stylesheet", href="styles/mobile.css")
     // endbuild
     script(type="text/javascript", src="//use.typekit.net/vzw7rfm.js")
@@ -59,7 +59,7 @@ html.no-js
 
     script(src="bower_components/jquery/jquery.js")
 
-    // build:js(app) scripts/scripts.js
+    // build:js(app) scripts/mobile.js
     script(src="scripts/mobile.js")
     // endbuild
 
