Change copy of mobile.html

--- a/app/jade/mobile.jade
+++ b/app/jade/mobile.jade
@@ -39,23 +39,17 @@ html.no-js
         p is a way to meet and have conversations with people from all around the world on your laptop or desktop computer.
         a.go-to-slide-2(href="#") Tell me more
       .slide#slide-2.js-hide
-        p If you were on one and you turned on your webcam and mic, someone from somewhere in the world would show up on your screen.
-        a.go-to-slide-3(href="#") Then what?
+        p You'll have conversations with people using your webcam and mic. One person shows up on the screen at a time, and you can next them whenever you want.
+        a.go-to-slide-3(href="#") Oh, so it's like Tinder + Skype!
         br
         br
         a.go-to-slide-1(href="#") Go back
       .slide#slide-3.js-hide
-        p Then you could have a deep, meaningful conversation with them late into the night, or you could be ruthless and by clicking Next meet someone new.
-        a.go-to-slide-4(href="#") Sounds scary!
-        br
-        br
-        a.go-to-slide-2(href="#") Go back
-      .slide#slide-4.js-hide
-        p We can email you a reminder to check this website out on your laptop or desktop computer if you want! Don't worry, we don't save your email address, all we do is just send one email.
+        p Yep, there you go! If you want we can email you a reminder to check this website out on your laptop or desktop computer. Don't worry, we don't save your email address, all we do is just send one email.
         form(method="post", action="emails/reminder", id="send-reminder")
           input(type="email", name="email", placeholder="Email Address")
           button(type="submit") Send Reminder
-        a.go-to-slide-3(href="#") Go back
+        a.go-to-slide-2(href="#") Go back
 
     script(src="bower_components/jquery/jquery.js")
 
